kubernetes/spack/s3-spack-io/web/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-spack-io-redirect
  namespace: spack
  labels:
    app: s3-spack-io
    srv: web-redirect
spec:
  selector:
    matchLabels:
      app: s3-spack-io
      srv: web-redirect
  replicas: 2
  template:
    metadata:
      labels:
        app: s3-spack-io
        srv: web-redirect
    spec:
      containers:
      - name: web
        image: "schmunk42/nginx-redirect"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
