kubernetes/spack/s3-spack-io/web/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: s3-spack-io-redirect
  namespace: spack
  labels:
    app: s3-spack-io
    svc: web-redirect
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: s3-spack-io
    svc: web-redirect
